# uv-template

./: .gitignore  .pre-commit-config.yaml  README.md  gcom.ps1  init.ps1  pyproject.toml
.github/workflows/: ci.yml
